fix: height overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   --dark-grey: #2d2d2d;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
